test/tests/errors/error-class-no-this-in-decs2.sm
// true
// false
// false
/**/
/**/

program {
    class T {
        var x: int = 1;
        const y: int = this.x;
    }
}